--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-<!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <title>My Site Title</title>
+        <link rel="stylesheet" href="style.css"/>
+
+    </head>
+    <body>
+        <h1>hello, World</h1>
+    </body>
+</html>
